<resources>
    <string name="app_name">MyFlexibleFragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_ini_home_fragment">Hello ini Home Fragment</string>
    <string name="ke_halaman_category">Ke Halaman Category</string>
    <string name="ini_halaman_category">Ini Halaman Category</string>
    <string name="kategori_lifestyle">Kategori Lifestyle</string>
    <string name="category_description">Category Description</string>
    <string name="ke_halaman_activity">Ke Halaman Activity</string>
    <string name="tampilkan_sebuah_dialog">Tampilkan Sebuah Dialog</string>
    <string name="tutup">Tutup</string>
    <string name="pilih">Pilih</string>
    <string name="jose_mourinho">Jose Mourinho</string>
    <string name="david_moyes">David Moyes</string>
    <string name="louis_van_gaal">Louis Van Gaal</string>
    <string name="sir_alex_fergusom">Sir Alex Fergusom</string>
    <string name="siapa_pelatih_tersukses_manchester_united">Siapa pelatih tersukses Manchester United</string>
</resources>